# background

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
nbproject/: configurations.xml  project.xml
res/: Makefile.am  SnT_constellation.txt  abt-dlg.ui  app-menu.ui  background.desktop  background.desktop.in  background.gresources.xml  cal.py  clock.py  hipparcos.json  info.py  pref-dlg.ui  star-win.ui  time-dlg.ui  user-dlg.ui
src/: AppMenu.cpp  AppMenu.hpp  AzimutAltitude.cpp  AzimutAltitude.hpp  BackgroundApp.cpp  BackgroundApp.hpp  CalendarModule.cpp  CalendarModule.hpp  ClockModule.cpp  ClockModule.hpp  Constellation.cpp  Constellation.hpp  ConstellationFormat.cpp  ConstellationFormat.hpp  Earth.cpp  Earth.hpp  FileLoader.cpp  FileLoader.hpp  GeoPosition.cpp  GeoPosition.hpp  HaruRenderer.cpp  HaruRenderer.hpp  HipparcosFormat.cpp  HipparcosFormat.hpp  HipparcosStar.cpp  HipparcosStar.hpp  InfoModule.cpp  InfoModule.hpp  JulianDate.cpp  JulianDate.hpp  Jupiter.cpp  Jupiter.hpp  Layout.cpp  Layout.hpp  Makefile.am  Mars.cpp  Mars.hpp  Math.cpp  Math.hpp  Mercury.cpp  (+57 more)
test/: Makefile.am  astro_test.cpp
